kubernetes/infra/ingress/cloudflared/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cloudflared
  namespace: cloudflare-tunnel
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: cloudflared
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: monitoring
      toPorts:
        - ports:
            - port: "2000"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
          rules:
            dns:
              - matchPattern: "*"
    - toEntities:
        - ingress
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: monitoring
            k8s:app.kubernetes.io/name: grafana
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:app.kubernetes.io/name: hubble-ui
      toPorts:
        - ports:
            - port: "8081"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: uptime
            k8s:app.kubernetes.io/name: uptime-kuma
      toPorts:
        - ports:
            - port: "3001"
              protocol: TCP
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "7844"
              protocol: TCP
            - port: "7844"
              protocol: UDP
            - port: "443"
              protocol: TCP
